Add method for deleting all meals associated with the user
